@@ -1,5 +1,5 @@
 /*
- *    Copyright 2009-2023 the original author or authors.
+ *    Copyright 2009-2025 the original author or authors.
  *
  *    Licensed under the Apache License, Version 2.0 (the "License");
  *    you may not use this file except in compliance with the License.
@@ -73,7 +73,7 @@ public final class TypeHandlerProvider<TH extends TypeHandler<? extends T>, T> i
     }
     if (instance == null) {
       try {
-        instance = (TH) typeHandlerTypeLiteral.getRawType().newInstance();
+        instance = (TH) typeHandlerTypeLiteral.getRawType().getConstructor().newInstance();
         injector.injectMembers(instance);
       } catch (Exception e) {
         throw new TypeException("Failed invoking constructor for handler " + typeHandlerTypeLiteral.getType(), e);
